--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -67,14 +67,6 @@
         android:ems="10"
         android:inputType="textPassword" />
 
-    <Spinner
-        android:id="@+id/categorieCreation"
-        android:layout_width="314dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/nameCreation"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="189dp" />
-
     <EditText
         android:id="@+id/prixCreation"
         android:layout_width="wrap_content"
@@ -113,4 +105,14 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="81dp"
         android:text="Annuler" />
+
+    <EditText
+        android:id="@+id/categorieCreation"
+        android:layout_width="317dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/nameCreation"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="181dp"
+        android:ems="10"
+        android:inputType="textPersonName" />
 </RelativeLayout>
