--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffb41e</color>
+    <color name="colorPrimaryDark">#f7a100</color>
+    <color name="colorAccent">#de5d02</color>
+    <color name="filter_btn_color">#c5c5c5</color>
 </resources>
