--- a/app/src/main/res/layout/activity_detail_annonce.xml
+++ b/app/src/main/res/layout/activity_detail_annonce.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dateDetail"
+    android:id="@+id/tvDetails"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.DetailAnnonceActivity">
@@ -91,4 +91,13 @@
         android:layout_marginStart="41dp"
         android:layout_marginTop="141dp"
         app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/dateDetail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/prixDetail"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="202dp"
+        android:text="TextView" />
 </RelativeLayout>
