--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -30,7 +30,7 @@
         </android.support.v7.widget.CardView>
 
         <TextView
-            android:id="@+id/annTitre"
+            android:id="@+id/annTitle"
             android:layout_width="310dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/annView"
@@ -45,8 +45,8 @@
             android:id="@+id/annPrix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/annTitre"
-            android:layout_alignStart="@+id/annTitre"
+            android:layout_below="@+id/annTitle"
+            android:layout_alignStart="@+id/annTitle"
             android:text="Prix"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp" />
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/annPrix"
-            android:layout_alignStart="@+id/annTitre"
+            android:layout_alignStart="@+id/annTitle"
             android:text="Date"
             android:textColor="@color/filter_btn_color" />
 
@@ -65,10 +65,10 @@
             android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/annDate"
-            android:layout_alignStart="@+id/annTitre"
+            android:layout_alignStart="@+id/annTitle"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="0dp"
             android:text="Description" />
@@ -77,7 +77,7 @@
             android:id="@+id/annFavorite"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:layout_alignTop="@+id/annTitre"
+            android:layout_alignTop="@+id/annTitle"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="20dp"
             android:background="@android:color/transparent"
@@ -95,6 +95,26 @@
             android:clickable="true"
             android:tint="@android:color/white"
             app:srcCompat="@drawable/ic_mail_black_24dp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/annDescription"
+            android:layout_alignStart="@+id/annTitle"
+            android:layout_marginBottom="-40dp"
+            app:srcCompat="@drawable/ic_person_black_24dp" />
+
+        <TextView
+            android:id="@+id/annVendeur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/imageView2"
+            android:layout_toEndOf="@+id/imageView2"
+            android:layout_marginStart="10dp"
+            android:text="Vendeur"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 </ScrollView>
