--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -25,8 +25,8 @@
                 android:id="@+id/annPrix"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/annTitre"
-                android:layout_alignStart="@+id/annTitre"
+                android:layout_below="@+id/annTitle"
+                android:layout_alignStart="@+id/annTitle"
                 android:text="Prix"
                 android:textSize="18sp" />
 
@@ -40,7 +40,7 @@
                 android:textStyle="italic" />
 
             <TextView
-                android:id="@+id/annTitre"
+                android:id="@+id/annTitle"
                 android:layout_width="266dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -101,7 +101,7 @@
                 android:layout_width="45dp"
                 android:layout_height="39dp"
                 android:layout_alignTop="@+id/annCategorie"
-                android:layout_alignEnd="@+id/annTitre"
+                android:layout_alignEnd="@+id/annTitle"
                 android:background="@android:color/transparent"
                 app:srcCompat="@drawable/ic_favorite_border_black_24dp" />
         </RelativeLayout>
