--- a/app/src/main/res/layout/activity_deposer_annonce.xml
+++ b/app/src/main/res/layout/activity_deposer_annonce.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
         android:hint="Nom*"
         android:inputType="textPersonName"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/nomDepAn"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="99dp"
         android:ems="10"
         android:hint="Email*"
         android:inputType="textEmailAddress"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/nomDepAn"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="126dp"
+        android:layout_marginTop="146dp"
         android:ems="10"
         android:hint="Password*"
         android:inputType="textPassword"
@@ -46,9 +46,9 @@
         android:id="@+id/pwd2DepAn"
         android:layout_width="171dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/nomDepAn"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="174dp"
+        android:layout_marginTop="194dp"
+        android:layout_toStartOf="@+id/validerDepAn"
         android:ems="10"
         android:hint="Confirmer Password*"
         android:inputType="textPassword"
@@ -58,9 +58,9 @@
         android:id="@+id/spinnerDepAn"
         android:layout_width="149dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/nomDepAn"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="220dp" />
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="88dp" />
 
     <EditText
         android:id="@+id/titreDepAn"
@@ -117,5 +117,29 @@
         android:layout_marginStart="26dp"
         android:text="Annuler"
         android:textSize="9sp" />
+
+    <Button
+        android:id="@+id/selectImageDepAn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/nomDepAn"
+        android:layout_alignStart="@+id/nomDepAn"
+        android:layout_marginBottom="-52dp"
+        android:text="Select File" />
+
+    <ImageView
+        android:id="@+id/imageDepAn"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/filePathDepAn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/selectImageDepAn"
+        android:layout_toEndOf="@+id/spinnerDepAn"
+        android:text="Select file..." />
 
 </RelativeLayout>
