--- a/app/src/main/res/layout/activity_deposer_annonce.xml
+++ b/app/src/main/res/layout/activity_deposer_annonce.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="194dp"
-        android:layout_toStartOf="@+id/validerDepAn"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="Confirmer Password*"
         android:inputType="textPassword"
@@ -58,8 +58,9 @@
         android:id="@+id/spinnerDepAn"
         android:layout_width="149dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="230dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="88dp" />
 
     <EditText
@@ -100,30 +101,31 @@
 
     <Button
         android:id="@+id/validerDepAn"
-        android:layout_width="66dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@+id/annulerDepAn"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="43dp"
+        android:layout_marginEnd="21dp"
         android:text="Valider"
         android:textSize="9sp" />
 
     <Button
         android:id="@+id/annulerDepAn"
-        android:layout_width="72dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/descDepAn"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="26dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-10dp"
         android:text="Annuler"
         android:textSize="9sp" />
 
     <Button
         android:id="@+id/selectImageDepAn"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/nomDepAn"
-        android:layout_alignStart="@+id/nomDepAn"
         android:layout_marginBottom="-52dp"
         android:text="Select File" />
 
@@ -131,15 +133,16 @@
         android:id="@+id/imageDepAn"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/filePathDepAn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/selectImageDepAn"
-        android:layout_toEndOf="@+id/spinnerDepAn"
-        android:text="Select file..." />
+        android:layout_alignTop="@+id/imageDepAn"
+        android:layout_alignEnd="@+id/validerDepAn"
+        android:text="Selected file..." />
 
 </RelativeLayout>
