--- a/app/src/main/res/layout/activity_deposer_annonce.xml
+++ b/app/src/main/res/layout/activity_deposer_annonce.xml
@@ -122,10 +122,10 @@
 
     <Button
         android:id="@+id/selectImageDepAn"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/nomDepAn"
+        android:layout_alignStart="@+id/nomDepAn"
         android:layout_marginBottom="-52dp"
         android:text="Select File" />
 
@@ -133,16 +133,18 @@
         android:id="@+id/imageDepAn"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
+        android:layout_alignTop="@+id/selectImageDepAn"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="23dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/filePathDepAn"
-        android:layout_width="wrap_content"
+        android:layout_width="139dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageDepAn"
-        android:layout_alignEnd="@+id/validerDepAn"
+        android:layout_alignBaseline="@+id/selectImageDepAn"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="14dp"
         android:text="Selected file..." />
 
 </RelativeLayout>
